--- a/bonus-2/style.css
+++ b/bonus-2/style.css
@@ -48,10 +48,11 @@ section{
 }
 
 .middle{
-
+    align-self: center;
 }
+
 .bottom{
-    
+    align-self: flex-end;
 }
 
 .space-around{
@@ -61,3 +62,4 @@ section{
 .space-between{
     justify-content: space-between
 }
+
